--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <script type="module" src="index.js"></script>
+    <script type="module">
+      import TWEEN from "https://cdn.skypack.dev/@tweenjs/tween.js";
+    </script>
   </body>
 </html>
